<resources>
    <string name="app_name">pruss</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="password">Contraseña (6dig min)</string>
    <string name="iniciar_sesion">SIGN IN</string>
    <string name="registrarse">SIGN UP</string>


    <string name="digitar_nombre">Nombre</string>
    <string name="digitar_correo">Correo electronico</string>
    <string name="digitar_contrasena">Contraseña</string>
    <string name="digitar_rcontrasena">Vuelva a digitar la contraseña</string>
    <string name="rb1">Masculino</string>
    <string name="rb2">Femenino</string>

    <string name="registrar">Guardar</string>
    <string name="text_resultado">Resultado</string>
    <string name="tv_fecha">"Fecha de nacimiento:"</string>
    <string name="hint_fecha">dd/mm/yy</string>
    <string name="menu_cerrarsesion">Cerrar Sesión</string>
    <string name="correo_texto">Tu correo es:</string>
    <string name="terminos"><![CDATA[Terminos & Condiciones]]></string>
    <string name="registrate">Registro</string>
    <string name="title_activity_nav">ActivityNAV</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_teams">Equipos</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="Home">Inicio</string>
    <string name="Team">Equipos</string>
    <string name="finance">Finanzas</string>
    <string name="inbox">Inbox</string>
    <string name="archivos">Archivos</string>
    <string name="settings">Ajustes</string>
    <string name="sign_off">Cerrar Sesión</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_nameproyect">Proyecto</string>
    <string name="Misproyectos">Mis proyectos</string>
    <string name="addtask">¿Que debes realizar?</string>
    <string name="add">+ Agregar nueva tarea</string>
    <string name="NewTask">Agregar una nueva tarea</string>
    <string name="cancelar">Cancelar</string>
    <string name="agregar">agregar</string>
    <string name="horadefault">11:59 pm</string>
    <string name="date_task">12/04/2020</string>
    <string name="tus_aportes">Tus aportes</string>
    <string name="infopersonal">Información personal</string>
    <string name="nombreuser">Nombre usuario</string>
    <string name="correouser">Correo usuario</string>
    <string name="rol_user">Mi rol</string>
    <string name="organizacion">Mi organización</string>
    <string name="configuracion">Configuración</string>
    <string name="notificacion">Notificaciones</string>
    <string name="ayuda">Ayuda</string>
    <string name="lenguaje">Lenguaje</string>
    <string name="acercade">Acerca de</string>
    <string name="vaciar">vaciar</string>
    <string name="papelera">No tienes ningun archivo almacenado</string>
    <string name="PrussTeam">Pruss Team</string>
    <string name="mandar_mensaje">+ crear nuevo chat</string>
    <string name="buscarmiembro">Buscar un miembro</string>
    <string name="flujotrabajo">Flujo de trabajo</string>
    <string name="newgroup">Agregar un nuevo grupo</string>
    <string name="Administradores" />
    <string name="Admin">Administradores</string>
    <string name="miembros">Miembros</string>
    <string name="newgrupo">Agregar un nuevo equipo</string>
    <string name="nombre_del_grupo">Nombre del equipo</string>
    <string name="recursos">Recurso monetario</string>
    <string name="descripcion">Descripcion</string>
    <string name="tusaportes">Tus aportes</string>
    <string name="reporte">Reporte de trabajo</string>
    <string name="peticion">Peticion de presupuesto</string>
    <string name="presupuestos">Presupuestos</string>
    <string name="Data">Data</string>



</resources>
