<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_home"
            android:title="@string/Home"
             />
        <item
            android:id="@+id/nav_equipos"
            android:title="@string/Team" />
        <item
            android:id="@+id/nav_finanzas"
            android:title="@string/finance" />
        <item
            android:id="@+id/nav_inbox"
            android:title="@string/inbox" />
        <item
            android:id="@+id/nav_archivos"
            android:title="@string/archivos" />
        <item
            android:id="@+id/nav_sett"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_sign_off"
            android:title="@string/sign_off" />
    </group>



</menu>
