<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_box_rounded"
    android:orientation="vertical"
    android:paddingBottom="15dp">

    <TextView
    android:id="@+id/textView9"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fontFamily="@font/nunito_bold"
    android:text="@string/NewTask"
    android:textAlignment="center"
    android:textColor="@android:color/black"
    android:textSize="18sp" />

    <EditText
        android:id="@+id/tv_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/addtask"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Fecha de entrega" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btt_calendar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/white"
            android:foreground="@drawable/icon_date" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/date_task" />
    </LinearLayout>

    <CalendarView
        android:id="@+id/calendarTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hora de entrega" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_time"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/white"
            android:foreground="@drawable/icon_time" />

        <TextView
            android:id="@+id/tv_hora"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/horadefault" />
    </LinearLayout>

    <TimePicker
        android:id="@+id/tp_hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:headerBackground="@color/background"
        android:timePickerMode="spinner"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_agg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agregar"
            android:textSize="12sp" />

        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>