<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".ui.teams.TeamsFragment">

    <Button
        android:id="@+id/bt_newgroup"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:background="@drawable/form_bt_circle"
        android:text="@string/newgroup"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/Admin"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="63dp" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nunito"
        android:paddingLeft="8dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/miembros"
        android:textColor="@color/background"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gris_coco" />

</LinearLayout>