<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView3"
                style="@style/Widget.AppCompat.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="110dp"
                android:fontFamily="@font/comfortaa_light"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/verde_pruss"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_Correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/form_bt_contorn"
                android:ems="10"
                android:hint="@string/correo_electronico"
                android:inputType="textEmailAddress"
                android:padding="6dp"
                android:textColor="@android:color/white"
                android:textColorHighlight="@color/colorPrimaryDark"
                android:textColorHint="@android:color/background_light"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_Contra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/form_bt_contorn"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="6dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:padding="10dp">

                <Button
                    android:id="@+id/bt_iniciarsesion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/form_button_circle_white"
                    android:text="@string/iniciar_sesion"
                    android:textAllCaps="false"
                    android:textColor="@color/background"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/bt_google"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="40dp"

                    android:background="@drawable/form_button_circle_white"
                    android:drawableStart="@drawable/googleg_standard_color_18"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/common_signin_button_text_long"
                    android:textColor="@color/background">

                </Button>


                <Button

                    android:id="@+id/tv_registrar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/form_button_circle_white"
                    android:text="@string/registrarse"
                    android:textAlignment="center"
                    android:textColor="@color/background"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/terminos"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>